--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,9 +27,10 @@ build-job:       # This job runs in the build stage, which runs first.
 unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
   script:
-    - echo "Running unit tests... This will take about 60 seconds."
-    - sleep 60
-    - echo "Code coverage is 90%"
+    - apt-get install pip3
+    - pip3 install geoalchemy2 spatialite
+    - python3 setup.py develop
+    - pytest tests/
 
 lint-test-job:   # This job also runs in the test stage.
   stage: test    # It can run at the same time as unit-test-job (in parallel).
