--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ unit-test-job:   # This job runs in the test stage.
     - DEBIAN_FRONTEND=noninteractive apt-get --fix-missing --yes install python3-pip
     - pip3 install geoalchemy2 spatialite setuptools pytest
     - python3 setup.py develop
-    - pytest tests/
+    - pytest test/
 
 lint-test-job:   # This job also runs in the test stage.
   stage: test    # It can run at the same time as unit-test-job (in parallel).
