--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,8 @@
 FROM ubuntu:20.04
 
-RUN add-apt-repository ppa:ubuntugis/ppa
-RUN apt-get update
+RUN apt-get install software-properties-common && apt-get update && add-apt-repository ppa:ubuntugis/ppa && apt-get update
 RUN DEBIAN_FRONTEND=noninteractive apt-get install --yes python3-pip libsqlite3-mod-spatialite default-jre wget git gdal-bin libgdal-dev
-RUN pip3 install gdal
-RUN pip3 install breathe numpy pandas scikit-learn rasterio matplotlib scikit-image geoalchemy2 spatialite setuptools pytest shapely click jinja2
+RUN pip3 install breathe numpy pandas scikit-learn rasterio matplotlib scikit-image geoalchemy2 spatialite setuptools pytest shapely click jinja2 gdal
 RUN pip3 install tensorflow
 
 RUN wget https://step.esa.int/downloads/8.0/installers/esa-snap_sentinel_unix_8_0.sh && yes "" | sh esa-snap_sentinel_unix_8_0.sh
