--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,7 +48,12 @@ deploy-job:      # This job runs in the deploy stage.
   script:
     - echo "Deploying application..."
     - apt-get update
-    - DEBIAN_FRONTEND=noninteractive apt-get --fix-missing --yes install python3-pip libsqlite3-mod-spatialite charliecloud
+    - DEBIAN_FRONTEND=noninteractive apt-get --fix-missing --yes install sudo charliecloud ca-certificates curl gnupg lsb-release
+    - mkdir -p /etc/apt/keyrings
+    - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+    - echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
+    - apt-get update
+    - apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
     - cp docker/Dockerfile .
     - ch-build -t peony .
     - ch-convert -i docker -o tar peony peony.tar.gz
