--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,7 +55,9 @@ deploy-job:      # This job runs in the deploy stage.
     - apt-get update
     - DEBIAN_FRONTEND=noninteractive apt-get --yes install docker-ce docker-ce-cli containerd.io docker-compose-plugin
     - cp docker/Dockerfile .
-    - service docker start
+    - groupadd docker
+    - usermod -aG docker $USER
+    - exec su -l $USER
     - ch-build -t peony .
     - ch-convert -i docker -o tar peony peony.tar.gz
     - echo "Application successfully deployed."
