--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,7 +48,10 @@ deploy-job:      # This job runs in the deploy stage.
   script:
     - echo "Deploying application..."
     - apt-get update
-    - DEBIAN_FRONTEND=noninteractive apt-get --yes install sudo charliecloud ca-certificates curl gnupg lsb-release
+    - DEBIAN_FRONTEND=noninteractive apt-get --yes install sudo charliecloud ca-certificates curl gnupg lsb-release build-essential
+    - wget https://github.com/hpc/charliecloud/releases/download/v0.28/charliecloud-0.28.tar.gz .
+    - tar -xvzf charliecloud-0.28.tar.gz
+    - cd charliecloud-0.28 && ./configure && make && make install && cd ..
     - mkdir -p /etc/apt/keyrings
     - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg
     - echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
