--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,8 +58,8 @@ deploy-job:      # This job runs in the deploy stage.
     - apt-get update
     - DEBIAN_FRONTEND=noninteractive apt-get --yes install docker-ce docker-ce-cli containerd.io docker-compose-plugin
     - cp docker/Dockerfile .
-    - /usr/local/bin/ch-build -t peony .
-    - /usr/local/bin/ch-convert -i docker -o tar peony peony.tar.gz
+    - /charliecloud-0.28/bin/ch-build -t peony .
+    - /charliecloud-0.28/bin/ch-convert -i docker -o tar peony peony.tar.gz
     - echo "Application successfully deployed."
   artifacts:
     paths:
