--- a/examples/lcz_pipeline.yaml
+++ b/examples/lcz_pipeline.yaml
@@ -6,7 +6,7 @@ steps:
       stepname: upsample
       outputFile: '{workdir}/upsampled.tif'
       cmd:
-        run: /snap/bin/gpt bandselect_upsampling.xml -Pinput={path} -Poutput={workdir}/upsampled.tif
+        run: /snap/bin/gpt /home/bandselect_upsampling.xml -Pinput={path} -Poutput={workdir}/upsampled.tif
         cwd: '{workdir}'
         stdout: './upsample.stdout.log'
         stderr: './upsample.stderr.log'
