--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,5 +2,5 @@ FROM orbitfold/peony_deps:latest
 
 COPY . /peony
 RUN cd peony && python3 setup.py install
-#COPY s2_classification_pipeline/ /s2_classification_pipeline
-#RUN cd s2_classification_pipeline && python3 setup.py install
+COPY s2_classification_pipeline/ /s2_classification_pipeline
+RUN cd s2_classification_pipeline && python3 setup.py install
