--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ unit-test-job:   # This job runs in the test stage.
     - apt-get update
     - DEBIAN_FRONTEND=noninteractive apt-get --fix-missing --yes install python3-pip libsqlite3-mod-spatialite
     - pip3 install geoalchemy2 spatialite setuptools pytest shapely pyreproj --upgrade
-    - python3 setup.py develop
+    - python3 setup.py install
     - pytest test/
 
 lint-test-job:   # This job also runs in the test stage.
