--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
 FROM orbitfold/peony_deps:latest
 
 COPY . /peony
-RUN cd peony && python3 setup.py install
-RUN cd peony/s2_classification_pipeline && python3 setup.py install
+RUN cd peony && conda run -n peony python3 setup.py install
+RUN cd peony/s2_classification_pipeline && conda run -n peony python3 setup.py install
