--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,8 +31,8 @@ unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
   script:
     - apt-get update
-    - DEBIAN_FRONTEND=noninteractive apt-get --fix-missing --yes install python3-pip libsqlite3-mod-spatialite
-    - pip3 install geoalchemy2 spatialite setuptools pytest shapely pyreproj numpy joblib pypyr
+    - DEBIAN_FRONTEND=noninteractive apt-get --fix-missing --yes install python3-pip libsqlite3-mod-spatialite gdal-bin
+    - pip3 install geoalchemy2 spatialite setuptools pytest shapely pyreproj numpy joblib pypyr gdal
     - python3 setup.py install
     - pytest test/
 
