--- a/pipelines/gee_lcz.yaml
+++ b/pipelines/gee_lcz.yaml
@@ -1,10 +1,8 @@
 context_parser: pypyr.parser.keyvaluepairs
 steps:
-  - name: peony.cmd
+  - name: cmd
     onError: 'gee download failed for {geojson} in {workdir}'
     in:
-      stepname: upsample
-      outputFile: '{workdir}/upsampled.tif'
       cmd:
         run: peony_gee_download -i {geojson} -o {geojson}.tif
         cwd: '{workdir}'
