--- a/pipelines/gee_lcz.yaml
+++ b/pipelines/gee_lcz.yaml
@@ -11,6 +11,19 @@ steps:
         stdout: '{workdir}/gee_download.stdout.log'
         stderr: '{workdir}/gee_download.stderr.log'
 
+  - name: peony.cmd
+    onError: 'lcz inference failed for {path} in {workdir}'
+    in:
+      stepname: inference
+      outputFile: '{workdir}/{name}_lab.tiff'
+      inputFiles:
+        - '{workdir}/{name}.tif'
+      cmd:
+        run: peony_lcz_inference -i {workdir}/{name}.tif -o {workdir} -m /peony/test/s2_lcz_weights.hdf5
+        cwd: '{workdir}'
+        stdout: '{workdir}/lcz_inference.stdout.log'
+        stderr: '{workdir}/lcz_inference.stderr.log'
+
 on_failure:
   - name: pypyr.steps.filewrite
     in:
