--- a/pipelines/gee_lcz.yaml
+++ b/pipelines/gee_lcz.yaml
@@ -6,7 +6,7 @@ steps:
       stepname: download
       outputFile: '{workdir}/{name}.tif'
       cmd:
-        run: peony_gee_download -i {path} -o {name}.tif
+        run: peony_gee_download -i {path} -o {name}.tif -p ee-orbitfold --new
         cwd: '{workdir}'
         stdout: '{workdir}/gee_download.stdout.log'
         stderr: '{workdir}/gee_download.stderr.log'
