--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@
 # For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
 
 default:
-  image: ubuntu:20.04
+  image: ubuntu:latest
 
 stages:          # List of stages for jobs, and their order of execution
   - build
