--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ unit-test-job:   # This job runs in the test stage.
   script:
     - apt-get update
     - DEBIAN_FRONTEND=noninteractive apt-get --fix-missing --yes install python3-pip libsqlite3-mod-spatialite gdal-bin
-    - pip3 install geoalchemy2 spatialite setuptools pytest shapely pyreproj numpy joblib pypyr gdal earthengine-api
+    - pip3 install geoalchemy2 spatialite setuptools pytest shapely pyreproj numpy joblib pypyr gdal earthengine-api rasterio
     - pip3 install tensorflow
     - python3 setup.py install
     - pytest test/
