--- a/pipelines/gdal_warp.yaml
+++ b/pipelines/gdal_warp.yaml
@@ -5,4 +5,4 @@ steps:
           cmd:  gdalwarp -cutline {geojson} -crop_to_cutline -co compress=lzw -overwrite {lab_names} {geojson_name}_lab.tif
     - name: pypyr.steps.cmd
       in:
-          cmd: gdalwarp -cutline {geojson} -crop_to_cutline -co compress=lzw -overwire {pro_names} {geojson_name}_pro.tif
+          cmd: gdalwarp -cutline {geojson} -crop_to_cutline -co compress=lzw -overwrite {pro_names} {geojson_name}_pro.tif
