--- a/pipelines/lcz_bayesian.yaml
+++ b/pipelines/lcz_bayesian.yaml
@@ -43,7 +43,7 @@ steps:
       inputFiles: 
         - '{workdir}/{name}_pro.tif'
       cmd:
-        run: peony_bayesian_inference -h {workdir}/{name}_pro.tif -e {workdir}/{name}_esa_wc.tif -p {workdir}/{name}_b_pro.tif -l /peony/test/esa_wc_likelihood.json
+        run: peony_bayesian_inference -h {workdir}/{name}_pro.tif -e {workdir}/{name}_esa_wc.tif -p {workdir}/{name}_b_pro.tif -l {workdir}/esa_wc_likelihood.json
         cwd: '{workdir}'
         stdout: '{workdir}/bayesian.stdout.log'
         stderr: '{workdir}/bayesian.stderr.log'
@@ -56,7 +56,7 @@ steps:
       inputFiles:
         - '{workdir}/{name}_b_pro.tif'
       cmd:
-        run: peony_pro_to_lab -i {workdir}/{name}_b_pro.tif -o {workdir}/{name}_b_lab.tif
+        run: peony_pro_to_lab -i {workdir}/{name}_b_pro.tif -o {workdir}/{name}_b_lab.tif -c {workdir}/lcz_colormap.json
         cwd: '{workdir}'
         stdout: '{workdir}/pro_to_lab.stdout.log'
         stderr: '{workdir}/pro_to_lab.stderr.log'
