--- a/pipelines/lcz_bayesian.yaml
+++ b/pipelines/lcz_bayesian.yaml
@@ -61,6 +61,17 @@ steps:
         stdout: '{workdir}/pro_to_lab.stdout.log'
         stderr: '{workdir}/pro_to_lab.stderr.log'
 
+  - name: peony.cmd
+    onError: 'cropping WSF 3D geotiff failed for {path} in {workdir}'
+    in:
+      stepname: crop_wsf_3d
+      outputFile: '{workdir}/{name}_wsf_3d.tif'
+      cmd:
+        run: peony_crop_from_tiff -i {path} -o {workdir}/{name}_wsf_3d.tif -g /home/ge83noc2/WSF3D_V02_BuildingHeight.tif
+        cwd: '{workdir}'
+        stdout: '{workdir}/crop_wsf_3d.stdout.log'
+        stderr: '{workdir}/crop_wsf_3d.stderr.log'
+
 on_failure:
   - name: pypyr.steps.filewrite
     in:
