added the ability to leave likelihood specification empty
Former-commit-id: b8c18c444d722ffb6c3e120080447db6e2793783

--- a/pipelines/lcz_4_seasons.yaml
+++ b/pipelines/lcz_4_seasons.yaml
@@ -90,7 +90,7 @@ steps:
       outputFile: '{workdir}/{name}_bayesian_three_pro.tif'
       inputFiles: 
         - '{workdir}/autumn_{name}_pro.tif'
-        - '{workdir}/{name}_bayesian_three_pro.tif'
+        - '{workdir}/{name}_bayesian_two_pro.tif'
       cmd:
         run: peony_bayesian_inference -h {workdir}/{name}_bayesian_two_pro.tif -e {workdir}/autumn_{name}_pro.tif -p {workdir}/{name}_bayesian_three_pro.tif
 
